@@ -21,14 +21,18 @@ apply plugin: 'application'
 application {
     mainClass = 'org.apache.ignite.ci.TcHelperJettyLauncher'
     applicationDefaultJvmArgs = igniteJava17JvmArgs + ["-Dfile.encoding=UTF-8",
-                                                        "-Dteamcity.bot.regionsize=32", // 32g Durable Memory region
+                                                        "-Dteamcity.bot.regionsize=32", // 32g durable memory region
                                                         "-Dhttp.maxConnections=100",
+                                                        "-Djava.net.preferIPv4Stack=true",
+                                                        "-DIGNITE_QUIET=false",
+                                                        "-Dteamcity.bot.ignite.metricsLogFrequencyMs=60000",
+                                                        "-Dteamcity.bot.log.totalSizeCap=10GB",
                                                         "-server",
-                                                        "-Xmx31g",
-                                                        "-XX:+AlwaysPreTouch",
-                                                        "-XX:+UseG1GC",
-                                                        "-XX:+ScavengeBeforeFullGC",
-                                                        "-XX:+UseStringDeduplication",
+                                                        "-Xms5g",
+                                                        "-Xmx24g",
+                                                        "-XX:+UseZGC",
+                                                        "-XX:+ZUncommit",
+                                                        "-XX:ZUncommitDelay=300",
                                                         "-Dcom.sun.management.jmxremote",
                                                         "-Dcom.sun.management.jmxremote.port=9010",
                                                         "-Dcom.sun.management.jmxremote.local.only=false",
@@ -93,8 +97,8 @@ distributions {
     }
 }
 
-tasks.register('prepareLocalWarRun') {
-    dependsOn tasks.named('installDist')
+tasks.register('prepareTcBotWarRun') {
+    dependsOn tasks.named('installDist'), ':ignite-tc-helper-web:war'
 
     doLast {
         def workDir = layout.buildDirectory.dir('install/jetty-launcher/work').get().asFile
